--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -50,20 +50,24 @@
 
                 <div class="row">
                     <div class="col">
-                        <p>Disk usage</p>
-
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
-                                 aria-valuemin="0" aria-valuemax="100">25%
+                        <div class="card">
+                            <div class="card-body">
+                                <p>HDD usage</p>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                                         aria-valuemin="0" aria-valuemax="100">25%</div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <p>RAM usage</p>
-
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
-                                 aria-valuemin="0" aria-valuemax="100">25%
+                        <div class="card">
+                            <div class="card-body">
+                                <p>RAM usage</p>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50"
+                                         aria-valuemin="0" aria-valuemax="100">50%</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -89,9 +93,9 @@
                             <td>1291</td>
                             <td>svo-41</td>
                             <td>running</td>
-                            <td><a href="https://webmeester.atlassian.net/browse/SVO-41">SVO-41</a></td>
-                            <td>Tamila Lavrovska</td>
-                            <td>Resolved</td>
+                            <td><a href="https://jira.atlassian.net/browse/TASK-41">TASK-41</a></td>
+                            <td>John Smith</td>
+                            <td>resolved</td>
                             <td>
                                 <div class="btn-group-sm">
                                     <button class="btn btn-sm btn-secondary dropdown-toggle" type="button"
